--- a/views/add_article.html
+++ b/views/add_article.html
@@ -18,9 +18,7 @@
 				<label>标题</label>
 				<input type="email" id="title" class="form-control" placeholder="标题">
 			</div>
-			<script type="text/plain" id="myEditor" style="width:1000px;height:240px;">
-		   
-			</script>
+			<script type="text/plain" id="myEditor" style="width:1000px;height:240px;"></script>
 			<div class="type-box">
 				<select id="type">
 				  <option>原创</option>
