--- a/views/article_info.html
+++ b/views/article_info.html
@@ -6,9 +6,12 @@
 	<link rel='stylesheet' href='/css/bootstrap.css' /> 
   <link rel='stylesheet' href='/css/style.css' />
   <link rel='stylesheet' href='/css/index.css' />
+  <link rel="stylesheet" href="/css/umeditor.css">
   <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.js"></script>
   <script src="http://apps.bdimg.com/libs/angular.js/1.5.0-beta.0/angular.min.js"></script>
   <script src="http://apps.bdimg.com/libs/moment/2.8.3/moment.min.js"></script>
+  <script src="/js/umeditor.config.js"></script>
+  <script src="/js/umeditor.min.js"></script>
 </head>
 <body ng-controller="articleCtrl" class="ar-info">
   <%- include header.html %>
@@ -36,21 +39,84 @@
         </ul>
       </div>
     </div>
-     
+     <div class="row comment-list-box">
+       <div class="col-xs-9">
+          <div class="comment-list">
+            <ul>
+              <li ng-repeat="comment in comments">
+                <div class="header clearfix"><a class="user" ng-bind="comment.user.username"></a>&nbsp;•&nbsp;<span class="created-time" ng-bind="comment.created_time">2015-02-02</span><span class="pull-right"><span ng-bind="$index+1"></span>楼</span></div>
+                <div class="content" ng-bind-html="comment.content">
+                  
+                </div>
+              </li>
+            </ul>
+          </div>
+          
+       </div>
+     </div>
+     <div class="row comment-box">
+       <div class="col-xs-9 comment">
+            <div class="header">添加回复</div>
+            <div class="inner">
+              <script type="text/plain" id="myEditor" style="width:1000px;height:240px;"></script>
+
+            </div>
+            <button class="btn btn-info" ng-click="addComment()" id="sub-comment">回复</button>
+       </div>
+
+     </div>
   </div>
 
 </body>
 <script>
+  var um = UM.getEditor('myEditor',{
+    initialFrameWidth :'879'
+  });
   var article = <%- JSON.stringify(articleInfo) %>;
-  var user = <%- JSON.stringify(user) %>;
-  console.log(user);
+  console.log(article);
   article.created_time=moment(article.created_time).format("YYYY-MM-DD HH:mm");
   var app=angular.module('myApp',[]);
   app.controller('articleCtrl',['$scope','$sce',function($scope,$sce){
     var html = $sce.trustAsHtml(article.html);
     $scope.data=article;
     $scope.html=html;
-    $scope.user=user;
+    $scope.user=article.user;
+    $scope.addComment=function(){
+      console.log(um.getContentTxt());
+      if(um.hasContents()){
+        if(islogin){
+          jQuery.ajax({
+            url: ''+location.pathname+'/comment',
+            type: 'POST',
+            dataType: 'json',
+            data: {content: um.getContent()},
+            success: function(data) {
+              switch(data.code){
+                case '00':
+                  window.location.reload()
+                break;
+                case '01':
+                  alert("系统错误")
+                break;
+              }
+            }
+          });
+        }else{
+          alert("请先登录");
+        }
+      }else{
+        alert("不能为空");
+      }
+    };
+    $scope.comments=(function(){
+      var datas=article.comment;
+      console.log(datas);
+      for(var i=0;i<datas.length;i++){
+        datas[i].content=$sce.trustAsHtml(datas[i].content);
+        datas[i].created_time=moment(datas[i].created_time).format("YYYY-MM-DD HH:mm");
+      }
+      return datas
+    })();
   }])
 	
 </script>
