增加移动端检测

--- a/views/loading.html
+++ b/views/loading.html
@@ -48,4 +48,17 @@
 		</div>
 	</div>
 </body>
+<script>
+	function isMobile(){
+    	var u = navigator.userAgent, app = navigator.appVersion;
+    	var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Linux') > -1; //android终端或者uc浏览器
+		var isIos = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
+		if(isAndroid==false&&isIos==false){
+			
+		}else{
+			window.location.href="/m";
+		}
+    }
+    isMobile();
+</script>
 </html>
