--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
   <body ng-controller="customersCtrl" class="in-style">
     	<%- include header.html %>
     	<div class="container main">
-    		<div class="row lllll">
+    		<div class="row">
     			<div class="col-xs-9 content">
     				<div class="header">
     					<ul class="nav nav-pills">
