--- a/views/article_info.html
+++ b/views/article_info.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title><%= title %></title>
-	<link rel='stylesheet' href='/css/bootstrap.css' /> 
+	<link rel='stylesheet' href='/css/bootstrap.min.css' /> 
   <link rel='stylesheet' href='/css/style.css' />
   <link rel="stylesheet" href="/ueditor/themes/default/css/ueditor.css">
   <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.js"></script>
   <script src="http://apps.bdimg.com/libs/angular.js/1.5.0-beta.0/angular.min.js"></script>
   <script src="http://apps.bdimg.com/libs/moment/2.8.3/moment.min.js"></script>
   <script src="/ueditor/ueditor.config.js"></script>
-  <script src="/ueditor/ueditor.all.js"></script>
+  <script src="/ueditor/ueditor.all.min.js"></script>
 </head>
 <body ng-controller="articleCtrl" class="ar-info">
   <%- include header.html %>
