--- a/views/login.html
+++ b/views/login.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="myApp">
 <head>
   <meta charset="UTF-8">
   <title>my login</title>
   <link rel='stylesheet' href='/css/bootstrap.css' /> 
   <link rel='stylesheet' href='/css/style.css' />
   <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.js"></script>
+  <script src="http://apps.bdimg.com/libs/angular.js/1.3.7/angular.min.js"></script>
 </head>
 <style>
 .login-box{
@@ -14,7 +15,7 @@
     margin-top: 10%;
   }
 </style>
-<body>
+<body ng-controller="myCtrl">
   <%- include header.html %>
   <div class="container">
     <div class="col-xs-4"></div>
@@ -28,7 +29,7 @@
         <input type="password" class="form-control" id="password" placeholder="密码">
       </div>
 
-      <button type="submit" class="btn btn-default" id="submitLogin">登陆</button>
+      <button type="submit" ng-click="inLogin()" class="btn btn-default">登陆</button>
     </div>
     <div class="col-xs-4"></div>
 
@@ -40,13 +41,12 @@
 
 </body>
 <script>
-  $("#submitLogin").click(function(){
-    $.ajax({
-      url:"login",
-      type:"post",
-      dataType:"json",
-      data:{username:$("#name").val(),password:$("#password").val()},
-      success:function(data){
+  var app=angular.module('myApp',[]);
+  app.controller('myCtrl',function($scope,$http){
+    $scope.inLogin=function(){
+      console.log(1);
+      $http.post('login',{username:$("#name").val(),password:$("#password").val()})
+      .success(function(data){
         switch(data.code){
           case '00':
             window.location.href='/blog'
@@ -55,8 +55,11 @@
             alert('用户名或者密码错误')
             break;
         }
-      }
-    })
+      })
+      .error(function(){
+        alert('系统错误');
+      })
+    }
   })
 </script>
 </html>
