--- a/views/register.html
+++ b/views/register.html
@@ -48,23 +48,25 @@ $("#submitRegister").click(function(){
         url:"regis",
         type:"post",
         dataType:"json",
-        data:{username:$("#name").val(),password:$("#password").val()},
-        success:function(data){
-            switch(data.code){
-                case '00':
-                    alert("注册成功");
-                    break;
-                case '01':
-                    alert("注册失败")
-                    break;
-                case '02':
-                    alert("用户名已被使用")
-                    break;
-            }
+        data:{username:$("#name").val(),password:$("#password").val()}
+    })
+    .then(function(data){
+      console.log(data);
+      switch(data.code){
+        case '00':
+          alert("注册成功");
+          break;
+        case '01':
+          alert("注册失败")
+          break;
+        case '02':
+          alert("用户名已被使用")
+          break;
         }
-    });
+      },function(){
+        alert("出错了");
+      })
     }
-    
 });
 </script>
 </html>
