增加小黑屋权限

--- a/views/header.html
+++ b/views/header.html
@@ -3,7 +3,7 @@
 	<div class="container header-inner">
 		<a href="/blog" class="logo"></a>
 		<ul class="pull-right nav">
-
+			<li><a href="/bill">小黑屋</a></li>
 			<li><a href="/blog?type=all&amp;page=1">首页</a></li>
 			<li class="isuser"></li>
 			<li class="outlogin"></li>
