--- a/views/bill.html
+++ b/views/bill.html
@@ -91,7 +91,7 @@
 <script>
   var app=angular.module('myApp',[]);
   var datas=<%- JSON.stringify(bills) %>;
-  for(let i=0;i<datas.length;i++){
+  for(var i=0;i<datas.length;i++){
       if(datas[i].state==0){
         datas[i].state='未提现';
       }else{
