--- a/views/article_info.html
+++ b/views/article_info.html
@@ -1,20 +1,11 @@
-<!doctype html>
-<html lang="en" ng-app="myApp">
+<!DOCTYPE html>
+<html ng-app="myApp">
 <head>
-	<meta charset="UTF-8">
-	<title><%= title %></title>
-	<link rel='stylesheet' href='/css/bootstrap.min.css' /> 
-  <link rel='stylesheet' href='/css/style.css' />
-  <link rel="stylesheet" href="/ueditor/themes/default/css/ueditor.css">
-  <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.js"></script>
-  <script src="http://apps.bdimg.com/libs/angular.js/1.5.0-beta.0/angular.min.js"></script>
-  <script src="http://apps.bdimg.com/libs/moment/2.8.3/moment.min.js"></script>
-  <script src="/ueditor/ueditor.config.js"></script>
-  <script src="/ueditor/ueditor.all.min.js"></script>
+  <%- include static.html %>
 </head>
 <body ng-controller="articleCtrl" class="ar-info">
   <%- include header.html %>
-	<div class="container box">
+  <div class="container box">
     <div class="row">
       <div class="col-xs-9 content">
         <h3 ng-bind="data.title"></h3>
@@ -28,93 +19,43 @@
               作者
             </div>
             <div class="inner">
-              <a href=""><p ng-bind="user.username"></p></a>
+              <a href=""><p ng-bind="data.user.username"></p></a>
             </div>
 
           </li>
           <li><a href="">
-            
+
           </a></li>
         </ul>
       </div>
     </div>
-     <div class="row comment-list-box">
-       <div class="col-xs-9">
-          <div class="comment-list">
-            <ul>
-              <li ng-repeat="comment in comments">
-                <div class="header clearfix"><a href="javascript:void(0)" class="user" ng-bind="comment.user.username"></a>&nbsp;•&nbsp;<span class="created-time" ng-bind="comment.created_time">2015-02-02</span><span class="pull-right"><span ng-bind="$index+1"></span>楼</span></div>
-                <div class="content" ng-bind-html="comment.content">
-                  
-                </div>
-              </li>
-            </ul>
-          </div>
-          
-       </div>
-     </div>
-     <div class="row comment-box">
-       <div class="col-xs-9 comment">
-            <div class="header">添加回复</div>
-            <div class="inner">
-              <script type="text/plain" id="myEditor" style="width:1000px;height:240px;"></script>
+    <div class="row comment-list-box">
+     <div class="col-xs-9">
+      <div class="comment-list">
+        <ul>
+          <li ng-repeat="comment in comments">
+            <div class="header clearfix"><a href="javascript:void(0)" class="user" ng-bind="comment.user.username"></a>&nbsp;•&nbsp;<span class="created-time" ng-bind="comment.created_time">2015-02-02</span><span class="pull-right"><span ng-bind="$index+1"></span>楼</span></div>
+            <div class="content" ng-bind-html="comment.content">
 
             </div>
-            <button class="btn btn-info" ng-click="addComment()" id="sub-comment">回复</button>
-       </div>
+          </li>
+        </ul>
+      </div>
 
-     </div>
+    </div>
+  </div>
+  <div class="row comment-box">
+   <div class="col-xs-9 comment">
+    <div class="header">添加回复</div>
+    <div class="inner">
+      <script type="text/plain" id="myEditor" style="width:1000px;height:240px;"></script>
+
+    </div>
+    <button class="btn btn-info" ng-click="addComment()" id="sub-comment">回复</button>
   </div>
 
+</div>
+</div>
+
 </body>
-<script>
-  var ue = UE.getEditor('myEditor',{
-    initialFrameWidth :'879'
-  });
-  var article = <%- JSON.stringify(articleInfo) %>;
-  article.created_time=moment(article.created_time).format("YYYY-MM-DD HH:mm");
-  var app=angular.module('myApp',[]);
-  app.controller('articleCtrl',['$scope','$sce',function($scope,$sce){
-    var html = $sce.trustAsHtml(article.html);
-    $scope.data=article;
-    $scope.html=html;
-    $scope.user=article.user;
-    $scope.addComment=function(){
-      console.log(ue.getContentTxt());
-      if(ue.hasContents()){
-        if(islogin){
-          jQuery.ajax({
-            url: ''+location.pathname+'/comment',
-            type: 'POST',
-            dataType: 'json',
-            data: {content: ue.getContent()},
-            success: function(data) {
-              switch(data.code){
-                case '00':
-                  window.location.reload()
-                break;
-                case '01':
-                  alert("系统错误")
-                break;
-              }
-            }
-          });
-        }else{
-          alert("请先登录");
-        }
-      }else{
-        alert("不能为空");
-      }
-    };
-    $scope.comments=(function(){
-      var datas=article.comment;
-      for(var i=0;i<datas.length;i++){
-        datas[i].content=$sce.trustAsHtml(datas[i].content);
-        datas[i].created_time=moment(datas[i].created_time).format("YYYY-MM-DD HH:mm");
-      }
-      return datas
-    })();
-  }])
-	
-</script>
 </html>
