--- a/views/index.html
+++ b/views/index.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
 <html ng-app="myApp">
   <head>
-    <title>艾云博客</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel='stylesheet' href='/css/bootstrap.css' /> 
-    <link rel='stylesheet' href='/css/style.css' />
-    <link rel='stylesheet' href='/css/index.css' />
-    <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.js"></script>
-    <script src="http://apps.bdimg.com/libs/angular.js/1.3.7/angular.min.js"></script>
-    <script src="http://apps.bdimg.com/libs/moment/2.8.3/moment.min.js"></script>
+    <%- include static.html %>
   </head>
-  <body ng-controller="customersCtrl" class="in-style">
-    	<%- include header.html %>
+  <body ng-controller="indexCtrl" class="in-style">
+      <%- include header.html %>
     	<div class="container main">
     		<div class="row">
     			<div class="col-xs-9 content">
@@ -25,7 +17,7 @@
     				</div>
     				<div class="article-list">
     					<ul >
-    						<li ng-repeat="list in lists" class="clearfix"><a ng-href="/blog/{{list._id}}">
+    						<li ng-repeat="list in lists" class="clearfix"><a ng-href="/blogInfo?id={{list._id}}">
     							<div class="col-xs-10 article-name"><span class="type" ng-bind="list.type"></span><span ng-bind="list.title"></span></div>
     							<div class="pull-right uptime" ng-bind="list.created_time"></div>
     						</a></li>
@@ -61,42 +53,5 @@
     			</div>
     		</div>
     	</div>
-      
   </body>
-   
-<script>
-  var app = angular.module('myApp', []),pageHtml='';
-  var datas = <%- JSON.stringify(articles) %>;
-  for(var i=0;i<datas.length;i++){
-    datas[i].created_time=moment(datas[i].created_time).format("YYYY-MM-DD HH:mm");
-  }
-  app.controller('customersCtrl',['$scope','$sce',function($scope,$sce) {
-    $scope.lists=datas;
-    $scope.currentPage=<%= currentPage %>;
-    $scope.type = '<%= type %>';
-    $scope.pageItem=(function(){
-      var pageArr=[];
-      for(var i=0;i<=Math.floor(<%= allPageNum %>/10);i++){
-        pageArr.push(i+1);
-      }
-      (<%= allPageNum %>%10==0)?pageArr.pop():'';
-        
-      
-      console.log(pageArr);
-      return pageArr;
-    })();
-    $scope.prePage=function(){
-      if($scope.currentPage>1){
-        window.location.href='/blog?type='+$scope.type+'&page='+($scope.currentPage-1)+'';
-      }  
-    }
-    $scope.nextPage=function(){
-      if($scope.currentPage<=$scope.pageItem.length-1){
-        window.location.href='/blog?type='+$scope.type+'&page='+($scope.currentPage+1)+'';
-      }  
-    }
-  }]);
-
-  
-</script>
 </html>
