--- a/views/mobile/index.html
+++ b/views/mobile/index.html
@@ -37,6 +37,7 @@
   }
 </style>
 <body ng-controller="customersCtrl">
+
 	<div class="weui_search_bar" id="search_bar">
     <form class="weui_search_outer">
       <div class="weui_search_inner">
@@ -56,7 +57,6 @@
       <div class="weui_panel">
         <div class="weui_panel_hd">文章列表</div>
         <div class="weui_panel_bd">
-
           <div class="weui_media_box weui_media_text" ng-repeat="article in articles">
             <a ng-href="m/blog/{{article._id}}">
               <h4 class="weui_media_title" ng-bind="article.title">标题一</h4>
@@ -79,6 +79,7 @@
   <script src="http://apps.bdimg.com/libs/moment/2.8.3/moment.min.js"></script>
 </body>
 <script>
+$(function(){
   $(".weui_tabbar_item:eq(0)").addClass("weui_bar_item_on");
   var datas=<%- JSON.stringify(articles) %>;
   var app = angular.module('myApp', []),pageHtml='';
@@ -90,5 +91,6 @@
   app.controller('customersCtrl',['$scope','$sce',function($scope,$sce) {
     $scope.articles=datas;
   }]); 
+}());
 </script>
 </html>
