--- a/views/index.html
+++ b/views/index.html
@@ -53,6 +53,6 @@
     			</div>
     		</div>
     	</div>
-      <p>豫ICP备15016970号</p>
+      <p style="text-align:center">豫ICP备15016970号</p>
   </body>
 </html>
