修改ueditor为百度静态资源库

--- a/views/add_article.html
+++ b/views/add_article.html
@@ -1,14 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>添加博客</title>
-	<link rel='stylesheet' href='/css/bootstrap.css' /> 
-  	<link rel='stylesheet' href='/css/style.css' />
-  	<link rel="stylesheet" href="/ueditor/themes/default/css/ueditor.css">
-  	<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.js"></script>
-  	<script src="/ueditor/ueditor.config.js"></script>
-  	<script src="/ueditor/ueditor.all.js"></script>
+	<%- include static.html %>
 </head>
 <style>
 	#title{
