--- a/views/loading.html
+++ b/views/loading.html
@@ -1,10 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>艾云博客</title>
-	<link rel='stylesheet' href='/css/bootstrap.css' />
-	<link rel='stylesheet' href='/css/style.css' />
+	<%- include static.html %>
 </head>
 <script>
 	function isMobile(){
