--- a/views/login.html
+++ b/views/login.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="myApp">
 <head>
-  <meta charset="UTF-8">
-  <title>my login</title>
-  <link rel='stylesheet' href='/css/bootstrap.css' /> 
-  <link rel='stylesheet' href='/css/style.css' />
-  <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.js"></script>
-  <script src="http://apps.bdimg.com/libs/angular.js/1.3.7/angular.min.js"></script>
+  <%- include static.html %>
 </head>
 <style>
 .login-box{
