--- a/views/register.html
+++ b/views/register.html
@@ -1,13 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>my register</title>
-	<link rel='stylesheet' href='/css/bootstrap.css' /> 
-    <link rel='stylesheet' href='/css/style.css' />
-    <link rel='stylesheet' href='/css/index.css' />
-    <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.js"></script>
-</head>
+	<%- include static.html %>
 <style>
     .regis-box{
         background: #ccc;
