--- a/views/static.html
+++ b/views/static.html
@@ -6,8 +6,8 @@
 <link rel='stylesheet' href='/css/index.css' />
 <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.js"></script>
 <script src="http://apps.bdimg.com/libs/angular.js/1.3.7/angular.min.js"></script>
-<script src="js/controller.js"></script>
-<script src="js/util.js"></script>
+<script src="/js/controller.js"></script>
+<script src="/js/util.js"></script>
 <script src="http://apps.bdimg.com/libs/moment/2.8.3/moment.min.js"></script>
 <script src="/ueditor/ueditor.config.js"></script>
-<script src="/ueditor/ueditor.all.min.js"></script>
+<script src="http://apps.bdimg.com/libs/ueditor/1.4.3.1/ueditor.all.min.js"></script>
