--- a/views/static.html
+++ b/views/static.html
@@ -1,7 +1,7 @@
 <title><%- title %></title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<link rel='stylesheet' href='/css/bootstrap.css' /> 
+<link rel='stylesheet' href='http://apps.bdimg.com/libs/bootstrap/3.3.4/css/bootstrap.min.css' /> 
 <link rel='stylesheet' href='/css/style.css' />
 <link rel='stylesheet' href='/css/index.css' />
 <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.js"></script>
