--- a/views/loading.html
+++ b/views/loading.html
@@ -11,7 +11,7 @@
 		if(isAndroid==false&&isIos==false){
 			
 		}else{
-			window.location.href="/m";
+			window.location.href="http://m.woiyun.com";
 		}
     }
     isMobile();
